# raytracinginaweekend

./: .gitignore  Cargo.toml  README.md
images/: current_progress.ppm  multi_sphere_aa.ppm  scene_diffuse.ppm
src/: aabb.rs  aarect.rs  bvh.rs  camera.rs  cube.rs  hitable.rs  image.rs  main.rs  material.rs  perlin.rs  random.rs  ray.rs  scene.rs  scenes.rs  sphere.rs  texture.rs  transform.rs  vec3.rs  volume.rs
